[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "Chai"
version = "0.0.1"
authors = [
  { name="Deezed420", email="thepurplexity@gmail.com" },
]
description = "Chai allows you to create menus or progress bars for cli apps"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/deezed420/chai"
"Bug Tracker" = "https://github.com/deezed420/chai/issues"